welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:4: error: type mismatch;
 found   : String("true")
 required: Boolean
		if (isMom==true){"true"}
                                 ^answerCell:5: error: type mismatch;
 found   : String("false")
 required: Boolean
		else {"false"}
                      ^answerCell:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if (isMorning==true){
        ^